--- a/static/tasks/css/style.css
+++ b/static/tasks/css/style.css
@@ -50,3 +50,11 @@ footer {
   position: fixed;
   bottom: 0;
 }
+
+.boton{
+  margin-top: 11px;
+  margin-left: 10px;
+  background-color: #2c3e50;
+  color: white;
+
+}
