--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,29 @@
 {% load static %}
-
 <html>
-
   <head>
     <meta charset="utf-8">
-    <title>Task</title>
+    <title>Tarea</title>
     <link rel="stylesheet" href="{% static 'tasks/css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'tasks/css/style.css' %}">
   </head>
-
   <body>
     <nav>
       <ul>
-        <li><a href="{% url 'tasks:index' %}">Lista de Tareas</a></li> 
+        {% if user.is_authenticated %}
+        <li><a href="{% url 'tasks:index' %}">Lista de Tareas</a></li>
+        <form method="post" action="{% url 'logout' %}">
+          {% csrf_token %}
+          <button type="submit" class="boton">Cerrar sesión</button>
+          <li><a href="{% url 'user_detail' user.pk %}">Información del usuario</a></li>
+        </form>
+      </li>
+        {% else %}
+        <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
+        <li><a href="{% url 'signup' %}">Registro de usuario</a></li>
+        <!-- Añadido -->
+        {% endif %}
       </ul>
+    </nav>
     </nav>
     <main>
       <div>
@@ -22,5 +32,4 @@
       </div>
     </main>
   </body>
-
 </html>
